# Commander4

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  meson.build  pyproject.toml  requirements.txt
aux/: Planck_pointing_sim.py  commander_tod.py  ducc_SHT_speedtest.py  huffman.py  make_simple_sim.py  paramfile_sim.py  paramfile_sim_default.yml  paramfile_sim_test_nside16.yml  save_sim_to_h5.py  test_MPI_comm_speed.py  test_new_huffman_performance.py
aux/fast_ang2pix/: bench_ang2pix.py  build_fast_ang2pix.sh  fast_ang2pix.cpp  fast_ang2pix.py
aux/simgen/: README.md  __init__.py  __main__.py  config.py  instrument.py  modifiers.py  noise.py  pipeline.py  pointing.py  sky.py  transfer.py  writers.py
aux/simgen/params/: example_param.yml  example_raster_param.yml
cmdr4_support/: CMakeLists.txt  cmdr4_support.cc  pyproject.toml  utils_pymod.cc
cmdr4_support/python/: utils_pymod.cc
native_support/: setup.py
native_support/python/: cmdr4_support.cc  utils_pymod.cc
notes/: class_design.py  data_structure.md
params/: param_AkariTODs_CG.yml  param_Planck+WMAP_mapsonly_CG.yml  param_Planck+WMAP_mapsonly_CG_Leoconfig.yml  param_Planck+WMAP_mapsonly_CG_new.yml  param_Planck+WMAP_mapsonly_CG_test.yml  param_Planck+WMAP_mapsonly_perpix.yml  param_Planck+WMAP_n128_mapsonly_perpix.yml  param_Planck+WMAP_nside128_mapsonly_perpix.yml  param_PlanckTODs_CG.yml  param_PlanckTODs_CG_new.yml  param_PlanckTODs_perpix.yml  param_PlanckTODs_perpix_mapCG.yml
params/Planck_TODs/: param_PlanckTODs_CG.yml  param_PlanckTODs_perpix.yml  param_PlanckTODs_perpix_mapCG.yml
params/Planck_mapsonly/: param_LFI+HFI+WMAP_mapsonly_CG.yml  param_LFI+HFI+WMAP_mapsonly_I_CG.yml  param_Planck+WMAP_mapsonly_CG_debug.yml  param_Planck+WMAP_mapsonly_perpix.yml  param_Planck+WMAP_mapsonly_perpix_betasamp.yml
params/SO_LAT/: param_SO_LAT_CG.yml  param_SO_LAT_CG_noSO.yml  param_SO_LAT_nocompsep.yml  param_SO_LAT_nocompsep_150GHz.yml  param_SO_LAT_nocompsep_90GHz.yml  param_SO_LAT_nocompsep_allbands.yml  param_SO_LAT_perpix.yml  param_SO_LAT_test1.yml
params/SO_LAT/detectors/: detectors.yml  detectors_i1ws0.yml  detectors_i1ws0_f090.yml  detectors_i1ws0_f150.yml  detectors_i1ws1_f090.yml  detectors_i1ws1_f150.yml  detectors_i1ws2_f090.yml  detectors_i1ws2_f150.yml  detectors_i3ws0_f090.yml  detectors_i3ws0_f150.yml  detectors_i3ws1_f090.yml  detectors_i3ws1_f150.yml  detectors_i3ws2_f090.yml  detectors_i3ws2_f150.yml  detectors_i4ws0_f090.yml  detectors_i4ws0_f150.yml  detectors_i4ws1_f090.yml  detectors_i4ws1_f150.yml  detectors_i4ws2_f090.yml  detectors_i4ws2_f150.yml  detectors_i6ws0_f090.yml  detectors_i6ws0_f150.yml  detectors_i6ws1_f090.yml  detectors_i6ws1_f150.yml  detectors_i6ws2_f090.yml  detectors_i6ws2_f150.yml
params/SO_SAT/detectors_SAT/: detectors.yml  param_SO_SAT_perpix.yml
params/akari/: param_AkariTODs_CG.yml
params/litebird/: param_litebird_inplacesim.yml  param_litebird_inplacesim2.1.yml  param_litebird_inplacesim2.1_CG.yml
params/litebird/detectors/: LiteBIRD118GHz_M2.yml  LiteBIRD145GHz_M1.yml  LiteBIRD182GHz_M2.yml  LiteBIRD217GHz_H1.yml  LiteBIRD280GHz_H2.yml  LiteBIRD334GHz_H1.yml  LiteBIRD402GHz_H2.yml  LiteBIRD40GHz_L1.yml  LiteBIRD50GHz_L2.yml  LiteBIRD570GHz_H3.yml  (+3 more)
params/misc/: param_Ananya_mapsonly_perpix.yml
src/commander4/: cli.py  communication.py  compsep_processing.py  data_selection.py  maps_from_file.py  meson.build  mpi_management.py  noise_sampling.py  parse_params.py  tod_processing.py  tod_processing_Planck.py  tod_processing_sim.py  tod_reader.py
src/commander4/cmdr4_support/: __init__.py
src/commander4/compression/: huffman.py
src/commander4/constrained_cmb/: constrained_cmb_loop.py  constrained_cmb_loop_MPI.py
src/commander4/data_models/: TOD_samples.py  band.py  detector_TOD.py  detector_group_TOD.py  detector_map.py  detector_samples.py  jump_corrections.py  pointing.py  scan_TOD.py  tod_view.py
src/commander4/data_models_unused/: __init__.py  band_map.py  detector.py  detector_group.py  scan.py  simple_band.py  simple_scan.py  tod_proc_data.py
src/commander4/devtools/: generate_stubs.py
src/commander4/experiments/: tod_read_utils.py
src/commander4/experiments/SO/: tod_reader_SO_LAT.py  tod_reader_SO_SAT.py
src/commander4/experiments/akari/: tod_reader_akari.py
src/commander4/experiments/litebird/: tod_reader_litebird_sim.py  tod_reader_litebird_sim_spawndetectors.py  tod_reader_litebird_sims.py
src/commander4/experiments/planck/: tod_reader_planck.py  tod_reader_planck_sim.py
src/commander4/logging/: performance_logger.py
src/commander4/noise_sampling/: noise_psd.py  noise_sampling.py  sample_ncorr.py  sigma0.py
src/commander4/output/: log.py  plot_chain.py  plotting.py  write_chains_files.py
src/commander4/simulations/: inplace_litebird_sim.py
src/commander4/sky_models/: component.py  sky_model.py
src/commander4/solvers/: CG_compsep_solver.py  CG_driver.py  comp_sep_solvers.py  mcmc_sampling.py  perpix_compsep_solver.py  preconditioners.py  spectral_index_sampler.py
src/commander4/standalone_tools/: constrained_cmb_realizations.py  diff_params.py
src/commander4/utils/: CG_mapmaker.py  MPI_helpers.py  ctypes_lib.py  execution_ids.py  general_algorithms.py  map_utils.py  mapmaker.py  math_operations.py  params.py  pixel_domain.py  unit_conversions.py
src/cpp/: compilation.sh  mapmaker.cpp
src/lib_cpp/: cmdr4_support.cc  utils_pymod.cc
src/python/: commander4.py  communication.py  compsep_loop.py  compsep_processing.py  constrained_cmb_loop.py  constrained_cmb_loop_MPI.py  dummy_compsep_loop.py  dummy_tod_loop.py  maps_from_file.py  mpi_management.py  noise_sampling.py  output.py  parse_params.py  tod_loop.py  tod_processing.py  tod_processing_Planck.py  tod_processing_sim.py
tests/: test_cg_mapmaker_masking.py  test_components.py  test_compsep_framework.py  test_gain_calibration.py  test_huffman_decode.py  test_math_utils.py  test_noise_sampling.py  test_pixel_domain.py  test_polarized_operator.py  test_spectral_index_sampler.py  test_tod_power_spectra.py  tests_mapmaker.py
(+53 files in other folders)
