[project]
name = "cmdr4_support"
description = "Compiled support code for Commander4"
authors = [
  {name = "Martin Reinecke", email = "martin@mpa-garching.mpg.de"},
]
#readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: OS Independent",
  "Programming Language :: C++",
  "Programming Language :: Python",
]
requires-python = ">=3.8"
dependencies = ["numpy>=1.17.0"]
version = "0.0.2"

[build-system]
requires = ["scikit-build-core>0.5", "nanobind>=2.5.0", "pybind11>=2.13.6", "numpy>=1.17.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
install.strip = false
